fix horizontal scroll

--- a/styles/common_styles.scss
+++ b/styles/common_styles.scss
@@ -3,9 +3,13 @@
 body {
   font-family: 'Exo 2';
   overflow-x: hidden;
-  touch-action: cross-slide-y;
-  -ms-touch-action: cross-slide-y;
   // position: relative;
+}
+
+.app-wrapper {
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 input[type='number']::-webkit-inner-spin-button,
